# checkers

./: docker-compose.yml
frontend/: Dockerfile  README.md  angular.json  karma.conf.js  nginx.conf  nginx.conf.template  package-lock.json  package.json
frontend/src/: styles.css
frontend/src/app/: app.component.css  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts
frontend/src/app/auth/modal-login/: modal-login.component.css
frontend/src/app/auth/modal-register/: modal-register.component.ts
frontend/src/app/board/: field.pipe.ts  websocket.service.ts
frontend/src/app/board/board/: board.component.css  board.component.html  board.component.ts
frontend/src/app/board/dto/: auth-message.ts  board-message.ts  chat-message.ts  chat-request.ts  move-details.ts  move-message.ts  move-request.ts  subscribe-request.ts
frontend/src/app/board/miniboard/: miniboard.component.css  miniboard.component.html
frontend/src/app/chat/: chat.component.css  chat.component.html  chat.component.ts
frontend/src/app/elements/: toast.service.ts
frontend/src/app/elements/button/: button.component.css  button.component.html  button.component.ts
frontend/src/app/elements/dto/: toast.ts
frontend/src/app/elements/toast/: toast.component.css  toast.component.html  toast.component.ts
frontend/src/app/error/: error.interceptor.ts
frontend/src/app/main/dto/: game-request.ts  game.ts
frontend/src/app/main/game-list/: game-list.component.css  game-list.component.html  game-list.component.ts
frontend/src/app/main/menu/: menu.component.css  menu.component.html  menu.component.ts
frontend/src/app/main/new-game-modal/: new-game-modal.component.html  new-game-modal.component.ts
frontend/src/environments/: environment.prod.ts  environment.ts
game/: Cargo.toml  Dockerfile
game-engine/: Cargo.toml  Dockerfile
game-engine/src/: board.rs  config.rs  main.rs
game-engine/src/ai/: counting_engine.rs  mod.rs  random_engine.rs
game-engine/src/rabbit/: ai_consumer.rs  mod.rs  move_consumer.rs
game-engine/src/rules/: british.rs  mod.rs
game/src/: config.rs  main.rs
game/src/rabbit/: engine_consumer.rs  game_publisher.rs  mod.rs  move_publisher.rs  state_consumer.rs  update_publisher.rs
gateway/: Cargo.toml  Dockerfile  config.yaml
gateway/src/: main.rs
main/: Cargo.toml  Dockerfile
main/migrations/: 001_create_users.sql  002_create_games.sql  003_create_moves.sql  004_change_fields_for_last_move.sql  005_add_fields_to_game.sql
main/src/: config.rs  main.rs  validation.rs
main/src/game/: error.rs  mod.rs  repository.rs  service.rs
main/src/rabbit/: game_consumer.rs  mod.rs  update_consumer.rs
main/src/security/: mod.rs
main/src/test/: mod.rs
main/src/user/: error.rs  mod.rs  repository.rs  service.rs
