[package]
name = "checkers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deadpool = "0.11.2"
deadpool-lapin = { version = "0.12.0", features = ["rt_tokio_1"] }
lapin = "2.3.1"
rand = "0.8.5"
regex = "1.10.4"
tokio = { version = "1.37.0", features = ["full"] }
