[package]
name = "checkers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["ws"] }
chrono = { version = "0.4.38", features = ["serde"] }
deadpool = "0.11.2"
deadpool-lapin = { version = "0.12.0", features = ["rt_tokio_1"] }
futures = "0.3.30"
jsonwebtoken = "9.3.0"
lapin = "2.3.1"
redis = "0.25.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"] }
tokio-tungstenite = "0.21.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
