[package]
name = "checkers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
bcrypt = "0.15.1"
chrono = { version = "0.4.37", features = ["serde"] }
jsonwebtoken = "9.3.0"
serde = { version = "1.0.197", features = ["derive"] }
sqlx = { version = "0.7.4", features = ["time", "chrono", "postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
validator = { version = "0.17.0", features = ["derive"] }
