[package]
name = "checkers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
bcrypt = "0.15.1"
chrono = { version = "0.4.37", features = ["serde"] }
deadpool = "0.11.2"
deadpool-lapin = { version = "0.12.0", features = ["rt_tokio_1"] }
jsonwebtoken = "9.3.0"
lapin = "2.3.1"
rand = { version = "0.8.5", features = ["std_rng"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.116"
serde_yaml = "0.9.34"
sqlx = { version = "0.7.4", features = ["time", "chrono", "postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
validator = { version = "0.17.0", features = ["derive"] }
